# pwr_pea

./: README.md
grafika_planety/: jacek_progress copy.cpp  jacek_progress.cpp  main (1).cpp
pea_1/: CMakeLists.txt  main.cpp
pea_2/: CMakeLists.txt  config.ini  main  main.cpp  main_old.cpp.txt  schemat.md  wyniki.rtf
pea_2/main.dSYM/Contents/Resources/DWARF/: main
pea_3/: CMakeLists.txt  config.ini  main.cpp
pea_3/PEA_3_JBOGDANSKI/: config.ini  output.csv
pea_3/PEA_3_JBOGDANSKI/KOD/: main.cpp
pea_3/PEA_3_JBOGDANSKI/KOD/classes/: TSP.cpp
pea_3/classes/: TSP.cpp  TSP.h
pea_3/source/: gr137.txt  gr202.txt  gr229.txt  gr666.txt  gr96.txt  pr144.txt  pr152.txt  pr226.txt  pr264.txt  pr299.txt  pr439.txt
pea_4/: CMakeLists.txt  config.ini  wyniki.xlsx
pea_4/classes/: TSP.cpp  TSP.h
pliki_testowe/: Asymmetric TSPs.html
